# haskell-minimax-games

./: Makefile  README.md  kalah.hs  minimax.cabal  minimax.hs  runkalah.hs  runtictactoe.hs  stack.yaml  tictactoe.hs  timetictactoe.hs
app/: runkalah.hs  runtictactoe.hs  timetictactoe.hs
src/: kalah.hs  minimax.hs  tictactoe.hs
