name:                minimax
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tylerprete/scheme-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Tyler Prete
maintainer:          psyonic@gmail.com
copyright:           Tyler Prete 2016
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array
                     , diffarray
  default-language:    Haskell2010
  exposed-modules:
      Minimax
      Kalah
      TicTacToe

executable kalah-exe
  hs-source-dirs:      app
  main-is:             runkalah.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minimax
                     , diffarray
  default-language:    Haskell2010

executable tictactoe-exe
  hs-source-dirs:      app
  main-is:             runtictactoe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minimax
                     , diffarray
  default-language:    Haskell2010

executable timetictactoe-exe
  hs-source-dirs:      app
  main-is:             timetictactoe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minimax
                     , diffarray
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tylerprete/scheme-compiler
